[package]
name = "marblejoiner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.58"
twitch-irc = "4.0.0"
clap = { version = "3.2.6", features = ["derive"] }
